# HMM

./: CMakeLists.txt
include/: hmm.hpp  viterbi.hpp
src/: hmm.cpp  viterbi.cpp
tester/: HMM_tester.cpp  SimpleHMM_tester.cpp
